removed Developer Portal from footer on mobile, fixed IOs issue

--- a/src/components/TrafimageMaps/TrafimageMaps.scss
+++ b/src/components/TrafimageMaps/TrafimageMaps.scss
@@ -141,7 +141,7 @@
     &.header {
       .wkp-menu-wrapper {
         top: 0;
-        width: 345px;
+        width: 100vw;
       }
 
       .wkp-topics-menu {
